namespace Diplom.MVC.ViewModels;

public class CreateUserViewModel
{
    public string Email { get; set; }
    public string Password { get; set; }
}