namespace Diplom.MVC.ViewModels;

public class EditUserViewModel
{
    public string Id { set; get; }
    public string UserName { get; set; }
    public string Email { get; set; }
    public string PhoneNumber { get; set; }

}